// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`experimentSettingsReducer Adds new object properly 1`] = `
Object {
  "meta": Object {},
  "processing": Object {
    "configureEmbedding": Object {
      "embeddingSettings": Object {
        "newProperty": Object {
          "name": "a",
          "value": "b",
        },
      },
    },
  },
  "root": Object {},
}
`;

exports[`experimentSettingsReducer Adds new value properly 1`] = `
Object {
  "meta": Object {},
  "processing": Object {
    "configureEmbedding": Object {
      "embeddingSettings": Object {
        "newProperty": "property",
      },
    },
  },
  "root": Object {},
}
`;

exports[`experimentSettingsReducer Updates existing value properly 1`] = `
Object {
  "meta": Object {},
  "processing": Object {
    "configureEmbedding": Object {
      "embeddingSettings": Object {
        "method": "newMethod",
      },
    },
  },
  "root": Object {},
}
`;
